<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NBody</string>
    
	<string name="calculate_method">Calculation way :</string>
	<string name="radio_button_java">CPU</string>
	<string name="radio_button_rs">RenderScript</string>
	<string name="radio_button_ndk">NDK</string>
	
	<string name="by_step">Step by step</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	
	<string name="choose_nb_bodies">Choose number of bodies : </string>
	<string name="nb_bodies">Bodies number : %1$d</string>
	
	<string name="drawer_open">Control panel</string>
	<string name="drawer_close">Control panel closed</string>

</resources>
